Feature/init claude (#53)
* Replace deprecated constructors for native Java types with the recommended factory methods.

* Ignored .vscode/ and .claude directories

* Set so line endings are handled correctly when developing on different platforms

* Minor fixes and improvements

* Updated dependencies to use mockito-core version 5.3.0 instead of mockito-all 1.8.0.

* Removed obsolete imports

* Minor fixes and cleanup

* Fixed an intermittent test failure in ServletPathTransformerTest by updating the expected transformed paths. Also updated pom.xml files to replace the deprecated 'mockito-all' dependency with the latest 'mockito-core' version 5.3.0 for improved testing support.

* Performed multi-module intilialization for Claude using the https://github.com/devclarityai/environment-setup/tree/main/claude-code momorepo commands

* Claude commands from DevClarity