@@ -103,8 +103,8 @@ public class GarbageCollectorSnapShotTest extends SQLTest {
     	long start = System.currentTimeMillis();
     	long end = start + 60000;
     	
-    	Mockito.when(data.getStartTime()).thenReturn(new Long(start));
-    	Mockito.when(data.getStartTime()).thenReturn(new Long(end));
+    	Mockito.when(data.getStartTime()).thenReturn(Long.valueOf(start));
+    	Mockito.when(data.getStartTime()).thenReturn(Long.valueOf(end));
     	Mockito.when(data.getInstanceName()).thenReturn("Mark/Sweep");
     	Mockito.when(data.getCollectionCount()).thenReturn(new Delta(1, 5, 60000));
     	Mockito.when(data.getCollectionTime()).thenReturn(new Delta(100, 1100, 60000));
