@@ -1,18 +1,9 @@
 package org.perfmon4j.reporter.model;
 
-import java.io.File;
-import java.lang.ref.WeakReference;
-import java.net.MalformedURLException;
-import java.net.URL;
-import java.net.URLClassLoader;
 import java.sql.Connection;
-import java.sql.Driver;
 import java.sql.ResultSet;
 import java.sql.SQLException;
 import java.sql.Statement;
-import java.util.HashMap;
-import java.util.Map;
-
 import org.perfmon4j.util.JDBCHelper;
 
 
@@ -56,7 +47,7 @@ public class ReportSQLConnection extends P4JConnection {
 			stmt = conn.createStatement();
 			rs = stmt.executeQuery("SELECT CategoryID, CategoryName FROM P4JCategory");
 			while (rs.next()) {
-				Long databaseID = new Long(rs.getLong(1));
+				Long databaseID = Long.valueOf(rs.getLong(1));
 				String name = rs.getString(2);
 				
 				IntervalCategory.getOrCreate(c, name, databaseID, this);
